test/fail/Imports/B.agda

module Imports.A where

postulate A : Set

